// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`provider task-envelope renderers > renders a callback-free Claude Code stream transport 1`] = `
"# Claude Code Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:fce321af942e8df197cd72f07cbd79ecf6f816883dea983369570c3ce348e4c8\`
- Provider: \`claude-code\`
- Adapter: \`claude-code\`
- Runtime manifest: \`sha256:81797719b9f52b60ef06c360b4c22ab58266ecfd16709fe848996dc8c9103c71\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/claude-code-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Claude Code stream)

Return the final response through the terminal result record captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes stream-json events."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex CLI transport from a forbidden-commit envelope 1`] = `
"# Codex CLI Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:06cf84e060e67a0c1d571095f52e2a5cf23a2248f0ad380035649da277a9fa54\`
- Provider: \`codex-cli\`
- Adapter: \`codex-cli\`
- Runtime manifest: \`sha256:a9b0eaa76b547be237e5aa15d4e086dd8dd276f56b2bfd946bf9525d303a1dc8\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-cli-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Forbidden: do not create a commit. Leave permitted worktree changes uncommitted.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.




## Completion (Codex CLI process)

Return the final response through the process output captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes process output."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex SDK transport from an allowed-commit envelope 1`] = `
"# Codex SDK Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:ac0141209cc24ace565b5129478512298ab1158961e52d699d12d6931a2ba419\`
- Provider: \`codex-sdk\`
- Adapter: \`codex-sdk\`
- Runtime manifest: \`sha256:21c5ddc1f5125634a9033069f3122894d866d6f70d357c7975c61bced5305f1d\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-sdk-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Allowed: a commit is permitted, but successful completion does not require one.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.




## Completion (Codex SDK stream)

Return the final response through the SDK event stream captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes SDK stream events."
`;

exports[`provider task-envelope renderers > renders a callback-free Hermes scripted transport 1`] = `
"# Hermes Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:b266ef347ab66676420169da055797f6d940a406e5e0f57d58bae94c4c0663f3\`
- Provider: \`hermes-cli\`
- Adapter: \`hermes-cli\`
- Runtime manifest: \`sha256:08072e6dfdf09b99490b739f638fb1d71484ea9b5963f2f0a8828c9b51212204\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/hermes-cli-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Hermes scripted process)

Return the final response through scripted stdout captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes scripted process output."
`;

exports[`provider task-envelope renderers > renders an OpenClaw callback transport from a required-commit envelope 1`] = `
"# OpenClaw Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:28896d406f7b2fa91aeb5fcff9ddc599f27c8d333f3b8b3399b26658033d3b15\`
- Provider: \`openclaw\`
- Adapter: \`openclaw\`
- Runtime manifest: \`sha256:0fb8600110961c719fd719ca519ef3dc33d99854dbafa011b6f6a44543a12d7f\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/openclaw-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.


## Profile Instructions (agent profile)

Follow the release checklist.


## Resume Context (task checkpoint)

- Resume count: 1
- Captured at: 2026-07-23T20:45:00.000Z
- Last step: 2

\`\`\`json
{
  "next": "dispatch"
}
\`\`\`

Continue from this checkpoint. Do not repeat work already represented in the saved state.


## Completion (OpenClaw callback)

When the work reaches a terminal state, report it to Veritas.

- Endpoint: \`POST http://localhost:3001/api/agents/task_transport/complete\`

\`\`\`bash
curl -X POST http://localhost:3001/api/agents/task_transport/complete \\
  -H "Content-Type: application/json" \\
  -d '{"attemptId":"attempt_transport","providerRuntimeManifestDigest":"sha256:0fb8600110961c719fd719ca519ef3dc33d99854dbafa011b6f6a44543a12d7f","success":true,"summary":"Brief description of what was done"}'
\`\`\`

For failure, send \`success: false\` and include an \`error\` message.

No native structured-output support is assumed; Veritas validates and normalizes the callback."
`;
